--- a/Resume-Project/aaron-wright-resume.html
+++ b/Resume-Project/aaron-wright-resume.html
@@ -26,7 +26,7 @@
         <!-- Navbar start-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            <a id="navbar-brand" href="#bannerhead">Aaron Wright's Resume</a>
+            <a id="navbar-brand" href="#bannerhead">Aaron Wright's Portfolio</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -66,7 +66,7 @@
   <!-- Hero start-->
  <div class="px-4-py-5-my-5-text-center">
   <img src="Banner.png" class="img-fluid" alt="This is the banner" id="bannerhead">
-    <h1 class="bannertitle">Aaron Wright's Resume!</h1>
+    <h1 class="bannertitle">Aaron Wright's Portfolio!</h1>
     <div class="col-lg-6 mx-auto">
       <p class="bodytext">With works across digital, print and audio, I'm a journalist that has dabbled in a lot of fields, yet retains professional and highly trained skills from each of these fields. As you scroll through this portfolio, you'll see a multimedia-skilled journalist and a capable leader, which has its roots from being an Eagle Scout. With me on your team, you'll get a fantastic journalist and a better teammate. I'll put you on fr!</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
