--- a/Resume-Project/aaron-wright-resume.html
+++ b/Resume-Project/aaron-wright-resume.html
@@ -82,6 +82,8 @@
       <div class="col-md-6">
       <h1 class="titlespecial">Print Works</h1>
       <ul class="bodytext">
+        <li><a href="https://baltimorebeat.com/baltimore-safe-haven-raises-10000-after-break-in-at-harm-reduction-center/" target="_blank">Baltimore Safe Haven Break-in</a></li>
+        <li><a href="https://www.britannica.com/biography/Cheryl-Dunye" target="_blank">Britannica page on Cheryl Dunye</a></li>
         <li><a href="https://www.britannica.com/topic/Deadpool-character" target="_blank">Britannica page on Deadpool</a></li>
         <li><a href="https://www.britannica.com/biography/Robert-Sengstacke-Abbott" target="_blank">Britannica page on Robert Sengstacke Abbott</a></li>
         <li><a href="https://www.blackexplosionnews.com/blog/2024/5/8/black-university-students-speak-on-sjp-sit-ins-at-mckeldin-mall" target="_blank">Black UMD speak on SJP sit-ins at McKeldin Mall (cowrite with the fantastic Mario Morais)</a></li>
